--- a/src/app/pages/aqsa-khitma/aqsa-khitma.component.html
+++ b/src/app/pages/aqsa-khitma/aqsa-khitma.component.html
@@ -6,7 +6,7 @@
 <section *ngIf="counters" class="big-number">
 
     <label class="main-counter number">{{counters.completed | number}}</label>
-    <span>صفحة تمّت تلاوتها من أجل المسجد الأقصى المبارك</span>
+    <span>صفحة تمّت تلاوتها في ختمة المسجد الأقصى المبارك</span>
 
 </section>
 
