social login, create user table & service

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,6 +7,8 @@
 
     <img class="logo" src="assets/khitma-logo.png" alt="logo of khitmah" />
 
+    <hr />
+    <app-login></app-login>
 
     <section *ngIf="groups">
 
@@ -25,6 +27,7 @@
         المصحف على الأعضاء بطريقة سلسلة، ثمّ متابعة تقدّم الختمة بشكل مريح ومتاح لجميع المشتركين في مجموعتك.
 
     </p>
+
 
     <hr />
 
